--- a/mini-homepage/static/layout.css
+++ b/mini-homepage/static/layout.css
@@ -1,48 +1,48 @@
 ﻿body {
-  color: black;
+	color: black;
 
-  background-color: #a3a3a3;
+	background-color: #a3a3a3;
 
-  background-image: url("../static/images/pattern.png");
+	background-image: url("../static/images/pattern.png");
 
-  background-size: 100px;
+	background-size: 100px;
 
-  position: fixed;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
+	position: fixed;
+	left: 0;
+	top: 0;
+	right: 0;
+	bottom: 0;
 }
 
 .bookcover {
 
-  background-color: #b4d1da;
+	background-color: #b4d1da;
 
-  border-radius: 9px;
+	border-radius: 9px;
 
-  border: 1px solid #738186;
+	border: 1px solid #738186;
 
-  width: 960px;
-  height: 660px;
+	width: 960px;
+	height: 660px;
 
-  margin: 100px auto;
+	margin: 100px auto;
 
-  position: relative;
+	position: relative;
 }
 
 
 .page {
-  position: relative;
-  
-  background-color: #FDEFDD;
+	position: relative;
 
-  width: 920px;
+	background-color: #FDEFDD;
 
-  height: 620px;
+	width: 920px;
 
-  border-radius: 9px;
+	height: 620px;
 
-  margin: 7.5px auto;
+	border-radius: 9px;
+
+	margin: 7.5px auto;
 }
 
 .bookdot {
@@ -62,18 +62,18 @@
 
 	height: 635px;
 
-  top: 5px;
+	top: 5px;
 
-  right: 5px;
+	right: 5px;
 
-  bottom: 5px;
+	bottom: 5px;
 
-  left: 5px;
+	left: 5px;
 }
 
 .c {
 	position: absolute;
-	
+
 	width: 860px;
 
 	height: 595px;
@@ -96,14 +96,14 @@
 }
 
 .ghost-button {
-    align-items: center;
-    text-align: center; 
-    color: black;
+	align-items: center;
+	text-align: center;
+	color: black;
 }
 
 .ghost-button:hover {
-    background-color: #27408B;
-    color: white;
+	background-color: #27408B;
+	color: white;
 }
 
 .c3-1 {
@@ -132,7 +132,7 @@
 	flex-direction: column;
 }
 
-.c3-3 { 
+.c3-3 {
 	flex: 0.6;
 }
 
@@ -185,9 +185,9 @@
 
 .c7url {
 	flex: 0.3;
-	
-	font-size:7px;
-	
+
+	font-size: 7px;
+
 	margin-left: 10px;
 
 	margin-top: 10px;
@@ -202,25 +202,28 @@
 
 	flex-direction: column;
 
-	width: 25%; height: 525px; overflow: hidden;
+	width: 25%;
+	height: 525px;
+	overflow: hidden;
 }
 
-.center { 
- text-align: center;
- justify-content: center;
- 
+.center {
+	text-align: center;
+	justify-content: center;
+
 }
 
 .planet {
-  background: #feac5e;
-  background: -webkit-linear-gradient(to right, #feac5e, #c779d0, #4bc0c8);
-  background: linear-gradient(to right, #feac5e, #c779d0, #4bc0c8);
-  color: gray;
+	background: #feac5e;
+	background: -webkit-linear-gradient(to right, #feac5e, #c779d0, #4bc0c8);
+	background: linear-gradient(to right, #feac5e, #c779d0, #4bc0c8);
+	color: gray;
 }
 
 .red {
 	color: red;
 }
+
 .blue2 {
 	color: blue;
 }
@@ -231,15 +234,18 @@
 
 .boxback {
 	background: #D3CCE3;
-background: -webkit-linear-gradient(to right, #D3CCE3, #E9E4F0);
-background: linear-gradient(to bottom, #E9E4F0, #D3CCE3);
+	background: -webkit-linear-gradient(to right, #D3CCE3, #E9E4F0);
+	background: linear-gradient(to bottom, #E9E4F0, #D3CCE3);
 
 }
 
 .boxback2 {
-	background: #03001e;  /* fallback for old browsers */
-	background: -webkit-linear-gradient(to right, #fdeff9, #ec38bc, #7303c0, #03001e);  /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to left, #fdeff9, #ec38bc, #7303c0, #03001e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	background: #03001e;
+	/* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #fdeff9, #ec38bc, #7303c0, #03001e);
+	/* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to left, #fdeff9, #ec38bc, #7303c0, #03001e);
+	/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 	border-radius: 15px;
 }
 
@@ -253,7 +259,7 @@ background: linear-gradient(to bottom, #E9E4F0, #D3CCE3);
 	flex-basis: 0;
 
 	flex-shrink: 0;
-	
+
 }
 
 .profiletext {
@@ -270,7 +276,7 @@ background: linear-gradient(to bottom, #E9E4F0, #D3CCE3);
 
 img {
 	width: 85%;
-	
+
 	display: block;
 
 	margin-left: auto;
